[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorycoreclaw"
version = "2.2.0"
description = "A human-like memory engine for AI applications with safety enhancements"
readme = "README.md"
license = "MIT"
keywords = [
    "memory",
    "ai",
    "knowledge-graph",
    "semantic-search",
    "cognitive",
    "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=6.0",
]
embeddings = [
    "sentence-transformers>=2.0",
]
visualization = [
    "matplotlib>=3.0",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/lcq225/MemoryCoreClaw"
Documentation = "https://github.com/lcq225/MemoryCoreClaw#readme"
Repository = "https://github.com/lcq225/MemoryCoreClaw.git"
Issues = "https://github.com/lcq225/MemoryCoreClaw/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memorycoreclaw*"]

[tool.setuptools.package-data]
memorycoreclaw = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true